<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AircraftGame</string>
    <string name="play_button">PLAY</string>
    <string name="cap_easy">EASY</string>
    <string name="cap_normal">NORMAL</string>
    <string name="cap_difficult">DIFFICULT</string>
    <string name="sound">sound</string>
    <string name="difficultychoices">Difficulty Choices</string>
    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="online">online</string>
</resources>
